semoss-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: semoss
  name: semoss-deployment
  namespace: semoss
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: semoss
      app.kubernetes.io/name: semoss
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-02-24T09:31:11Z'
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: semoss
        app.kubernetes.io/name: semoss
    spec:
      containers:
        - args:
            - '-c'
            - >-
              runCS.sh
          command:
            - /bin/bash
          image: IMAGE:TAG
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /Monolith/api/config
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 300
          name: semoss
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /Monolith/api/config
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 10
          resources:
            limits:
              cpu: '8'
              memory: 30Gi
            requests:
              cpu: '6'
              memory: 24Gi
          securityContext:
            capabilities:
              drop:
                - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: DOCKER_PULL_SECRET
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      # optional service account 
      # serviceAccount: semoss-pod-s3-service-account
      # serviceAccountName: semoss-pod-s3-service-account
