semoss-service.yml
apiVersion: v1
kind: Service
metadata:
  name: semoss-service
  namespace: semoss
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: semoss
    app.kubernetes.io/name: semoss
  sessionAffinity: None
  type: ClusterIP
