zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: semoss
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 2181
    protocol: TCP
    targetPort: 2181
  selector:
    app: zookeeper
  sessionAffinity: None
  type: ClusterIP
